--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #282c34;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  color: slategray;
+}
+
+.icon {
+  width: 1rem;
+  padding-right: 6px;
+}
+
+h2 {
+  border-bottom: solid 4px white;
+  padding-left: 1rem;
 }
